k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-db
  template:
    metadata:
      labels:
        app: url-db
    spec:
      containers:
        - name: db
          image: postgres:15
          ports:
            - containerPort: 5432
