k8s/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-api
spec:
  selector:
    app: url-api
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
