k8s/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-db
spec:
  selector:
    app: url-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
